make infographic labels 1px smaller on small-to-large viewports to prevent wrapping

--- a/posts/patricia-evans/less/app.less
+++ b/posts/patricia-evans/less/app.less
@@ -1056,6 +1056,9 @@ p,ul,ol,li {
         display: table-cell;
         vertical-align: middle;
         @media @screen-small-above {
+            font-size: 12px;
+        }
+        @media @screen-large-above {
             font-size: 13px;
         }
     }
